force-app/main/default/objects/Document_Template__c/fields/Allowed_Fields__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Fields__c</fullName>
    <description>Optional whitelist of allowed fields (JSON or newline-separated). If specified, only these fields can be used in the template.</description>
    <label>Allowed Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>