force-app/main/default/objects/Document_Template__c/fields/Html_Body__c.field-meta.xml
<CustomField>
    <fullName>Html_Body__c</fullName>
    <description>Normalized HTML template after DOCX conversion or direct HTML upload.</description>
    <label>HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>