force-app/main/default/objects/Document_Template__c/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <description>The primary SObject API name (e.g., Account, Opportunity) that this template is designed for.</description>
    <label>Primary Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>