force-app/main/default/objects/Document_Template__c/fields/Renderer_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Renderer_Strategy__c</fullName>
    <description>The rendering strategy to use for PDF generation. Default is Function (Salesforce Function with Playwright).</description>
    <label>Renderer Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Function</fullName>
                <default>true</default>
                <label>Function</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>