force-app/main/default/objects/Document_Template__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>The type of source file used for this template.</description>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Word</fullName>
            </value>
            <value>
                <fullName>HTML</fullName>
                <default>true</default>
                <label>HTML</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>