force-app/main/default/objects/Document_Template__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Holds the HTML template used when generating the PDF.</description>
    <label>Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>